--- a/README
+++ b/README
@@ -4,6 +4,12 @@ coopy - object persistence
 coopy is a persistence tool which implements the prevalence pattern.
 coopy intercepts method calls, logging them into 'actions' to restore object state by re-executing these actions.
 
+TESTS
+-----
+
+    $ py.test
+
+
 NOTES
 -----
 
